# stac-fastapi-collection-discovery

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  release-please-config.json  versions.json
.github/: dependabot.yml
.github/workflows/: ci.yml  conventional-commits-prs.yml  docs.yml  release-please.yml
dev-docs/specs/: upstream-error-handling.md
docs/: using-the-api.ipynb
src/stac_fastapi/collection_discovery/: __init__.py  app.py  core.py  settings.py
tests/: conftest.py
tests/fixtures/cassettes/: test_real_collections_pagination  test_real_collections_search  test_real_collections_with_bbox  test_real_collections_with_datetime  test_real_health_check  test_real_landing_page
tests/integration/: test_real_apis.py
tests/unit/: test_app.py  test_core.py  test_health.py
v0.1.0/: 404.html  index.html  sitemap.xml
v0.1.0/contributing/: index.html
v0.1.0/search/: search_index.json
v0.1.0/using-the-api/: index.html
v0.2.0/: 404.html  index.html  sitemap.xml
v0.2.0/contributing/: index.html
v0.2.0/using-the-api/: index.html
v0.2.1/: 404.html  index.html  sitemap.xml
v0.2.1/contributing/: index.html
v0.2.1/using-the-api/: index.html
v0.2.2/: 404.html  index.html  sitemap.xml
v0.2.2/contributing/: index.html
v0.2.2/using-the-api/: index.html
v0.2.3/: 404.html  index.html  sitemap.xml
v0.2.3/contributing/: index.html
v0.2.3/search/: search_index.json
v0.2.3/using-the-api/: index.html
v0.3.0/: 404.html  index.html  sitemap.xml
v0.3.0/contributing/: index.html
v0.3.0/search/: search_index.json
v0.3.0/using-the-api/: index.html  using-the-api.ipynb
